tests/errors/lex_char2.java
public class lex_char2 {
public static	char b = '\b;
}
